--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -78,13 +78,12 @@
         <!-- For example columns with settings: -->
         <div class="row">
             <div class="col s6 input-field">
+                <input type="text" class="value" id="upsip" />
+                <label for="upsip" class="translate">IP of apcupsd</label>
+            </div>
+            <div class="col s6 input-field">
                 <input type="checkbox" class="value" id="option1" />
                 <label for="option1" class="translate">option1</label>
-            </div>
-
-            <div class="col s6 input-field">
-                <input type="text" class="value" id="option2" />
-                <label for="option2" class="translate">option2</label>
             </div>
         </div>
 
