Tune adapter metadata and translation.

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -69,7 +69,7 @@
 
         <div class="row">
             <div class="col s12 m4 l2">
-                <img src="template.png" class="logo">
+                <img src="ups.png" class="logo">
             </div>
         </div>
 
@@ -88,8 +88,8 @@
         </div>
         <div class="row">
             <div class="col s6 input-field">
-                <input type="checkbox" class="value" id="option1" />
-                <label for="option1" class="translate">option1</label>
+                <input type="number" class="value" id="pollingInterval" />
+                <label for="pollingInterval" class="translate">Polling interval</label>
             </div>
         </div>
     </div>
