Changed settings translation.

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -79,17 +79,17 @@
         <div class="row">
             <div class="col s6 input-field">
                 <input type="text" class="value" id="upsip" />
-                <label for="upsip" class="translate">IP of apcupsd</label>
+                <label for="upsip" class="translate">upsip</label>
             </div>
             <div class="col s6 input-field">
                 <input type="number" class="value" id="upsport" />
-                <label for="upsport" class="translate">Port of apcupsd</label>
+                <label for="upsport" class="translate">upsport</label>
             </div>
         </div>
         <div class="row">
             <div class="col s6 input-field">
                 <input type="number" class="value" id="pollingInterval" />
-                <label for="pollingInterval" class="translate">Polling interval</label>
+                <label for="pollingInterval" class="translate">pollingInterval</label>
             </div>
         </div>
     </div>
