Started to develop React version.

--- a/admin/tab_m.html
+++ b/admin/tab_m.html
@@ -1,14 +1,7 @@
 <html>
 
 <head>
-
-    <!-- Load ioBroker scripts and styles-->
-    <link rel="stylesheet" type="text/css" href="../../css/adapter.css" />
     <script type="text/javascript" src="../../socket.io/socket.io.js"></script>
-
-    <!-- Load our own files -->
-    <link rel="stylesheet" type="text/css" href="style.css" />
-
 </head>
 
 <body>
@@ -17,7 +10,7 @@
     <div class="m adapter-container" id="root"></div>
 
     <!-- load compiled React scripts -->
-    <script type="text/javascript" src="build/index.js"></script>
+    <script type="text/javascript" src="build/tab.js"></script>
 
 </body>
 
